--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "stoutlogic/acf-builder": "^1.8"
+        "stoutlogic/acf-builder": "^1.8",
+        "twbs/bootstrap": "4.3.1"
     }
 }
