--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-exec": "^3.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.14"
   }
 }
